--- a/webTechnology.html
+++ b/webTechnology.html
@@ -28,27 +28,27 @@
    </nav>
    
 <article>
-<div>Web-технологии можно условно разделить на две пересекающиеся группы: клиентские и серверные</div>
+<h5>Web-технологии можно условно разделить на две пересекающиеся группы: клиентские и серверные</h5>
 
 <ul>
    <li>Клиентские:
 		<dl>
-		   <dt>HTML</dt>
+		   <dt><b>HTML</b></dt>
 		   <dd>стандартный язык разметки Web-страниц</dd>
-		   <dt>CSS</dt>
+		   <dt><b>CSS</b></dt>
 		   <dd>средство описания и оформления внешнего вида Web-страниц</dd>
-		   <dt>JavaScript</dt>
+		   <dt><b>JavaScript</b></dt>
 		   <dd>применяется в браузерах как язык сценариев для придания интерактивности Web-страницам</dd>
 		</dl>
 	</li>
 	
    <li>Серверные:
 		<dl>
-		   <dt>ASP.NET (C#)</dt>
+		   <dt><b>ASP.NET (C#)</b></dt>
 		   <dd>технология создания Web-приложений от компании Microsoft</dd>
-		   <dt>JSP (Java)</dt>
+		   <dt><b>JSP (Java)</b></dt>
 		   <dd>технология создания Web-приложений от компании Oracle</dd>
-		   <dt>PHP</dt>
+		   <dt><b>PHP</b></dt>
 		   <dd>язык программирования, интенсивно применяемый для разработки Web-приложений</dd>
 		</dl>
 	</li>
