--- a/test.html
+++ b/test.html
@@ -1,81 +1,74 @@
 <!DOCTYPE html>
 
-   <head>
-      <title>HTML</title>
-      <meta charset="utf-8" />
-   </head>
+ <head>
+    <title>HTML</title>
+    <meta charset="utf-8" />
+ </head>
    <body>
    <header>
-
-   <figure>
-   <img src="webLogo.PNG" alt="webLogo logo" width="245" height="134" />
-	</figure>
-	<h1>Основы Web-технологий</h1>
+		<img src="webLogo.PNG" alt="webLogo logo" width="245" height="134" />
+		<h1>Основы Web-технологий</h1>
+		<nav>
+		  <ul>
+			<li><a href="Index.html">Главная</a></li>
+			<li><a href="webTechnology.html">Web-технологии</a>
+				<ul>
+					<li><a href="html.html">HTML5</a></li>
+					 <li><a href="css.html">CSS3</a></li>
+					 <li><a href="js.html">JavaScript</a></li>
+				</ul>
+			</li>
+			 <li><a href="calculator.html">Калькулятор</a></li>
+			 <li><a href="test.html">Тест</a></li>
+		  </ul>
+		</nav>
 	</header>
 
-   <nav>
-      <ul>
-		<li><a href="Index.html">Главная</a></li>
-		<li><a href="webTechnology.html">Web-технологии</a>
-			<ul>
-				<li><a href="html.html">HTML5</a></li>
-				 <li><a href="css.html">CSS3</a></li>
-				 <li><a href="js.html">JavaScript</a></li>
-			</ul>
-		</li>
-         <li><a href="calculator.html">Калькулятор</a></li>
-         <li><a href="test.html">Тест</a></li>
-      </ul>
-   </nav>
-   
-<form>
+	<form id="test" name="test">
 
-Какой тег предназначен для создания ссылок:
-<br />
-<input type="radio" name="ref1" value="ref1" />&lt; a&gt;<br />
-<input type="radio" name="ref2" value="ref2" />&lt;a /&gt;<br />
-<input type="radio" name="ref3" value="ref3" />&lt;ref&gt;<br />
-<input type="radio" name="ref4" value="ref4" />&lt;ref /&gt;<br />
+		Какой тег предназначен для создания ссылок:
+			<br />
+		<input type="radio" name="ref1" value="ref1" />&lt; a&gt;<br />
+		<input type="radio" name="ref2" value="ref2" />&lt;a /&gt;<br />
+		<input type="radio" name="ref3" value="ref3" />&lt;ref&gt;<br />
+		<input type="radio" name="ref4" value="ref4" />&lt;ref /&gt;<br />
 
-Какой тег предназначен для создания нумерованного списка:
-<br />
-<input type="radio" name="list1" value="list1" />&lt;li&gt;<br />
-<input type="radio" name="list2" value="list2" />&lt;dl&gt;<br />
-<input type="radio" name="list3" value="list3" />&lt;ol&gt;<br />
-<input type="radio" name="list4" value="list4" />&lt;ul&gt;<br />
+		Какой тег предназначен для создания нумерованного списка:
+			<br />
+		<input type="radio" name="list1" value="list1" />&lt;li&gt;<br />
+		<input type="radio" name="list2" value="list2" />&lt;dl&gt;<br />
+		<input type="radio" name="list3" value="list3" />&lt;ol&gt;<br />
+		<input type="radio" name="list4" value="list4" />&lt;ul&gt;<br />
 
-Какой тег предназначен для передачи служебной информации браузеру:
-<br />
-<input type="radio" name="br1" value="br1" />&lt;info&gt;<br />
-<input type="radio" name="br2" value="br2" />&lt;info /&gt;<br />
-<input type="radio" name="br3" value="br3" />&lt;meta&gt;<br />
-<input type="radio" name="br4" value="br4" />&lt;meta /&gt;<br />
+		Какой тег предназначен для передачи служебной информации браузеру:
+			<br />
+		<input type="radio" name="br1" value="br1" />&lt;info&gt;<br />
+		<input type="radio" name="br2" value="br2" />&lt;info /&gt;<br />
+		<input type="radio" name="br3" value="br3" />&lt;meta&gt;<br />
+		<input type="radio" name="br4" value="br4" />&lt;meta /&gt;<br />
 
-Какие теги используются при создании таблицы:
-<br />
-<input type="checkbox" name="table1" value="table1" />&lt;body&gt;<br />
-<input type="checkbox" name="table2" value="table2" />&lt;td>&gt;<br />
-<input type="checkbox" name="table3" value="table3" />&lt;caption&gt;<br />
-<input type="checkbox" name="table4" value="table4" />&lt;column&gt;<br />
+		Какие теги используются при создании таблицы:
+			<br />
+		<input type="checkbox" name="table1" value="table1" />&lt;body&gt;<br />
+		<input type="checkbox" name="table2" value="table2" />&lt;td>&gt;<br />
+		<input type="checkbox" name="table3" value="table3" />&lt;caption&gt;<br />
+		<input type="checkbox" name="table4" value="table4" />&lt;column&gt;<br />
 
-Какие атрибуты используются при создании форм:
-<br />
-<input type="checkbox" name="form1" value="form1" />autocomplete<br />
-<input type="checkbox" name="form2" value="form2" />action<br />
-<input type="checkbox" name="form3" value="form3" />charset<br />
-<input type="checkbox" name="form4" value="form4" />validate<br />
+		Какие атрибуты используются при создании форм:
+			<br />
+		<input type="checkbox" name="form1" value="form1" />autocomplete<br />
+		<input type="checkbox" name="form2" value="form2" />action<br />
+		<input type="checkbox" name="form3" value="form3" />charset<br />
+		<input type="checkbox" name="form4" value="form4" />validate<br />
 
-</form>
-
-<br />
-<footer>
-
-      <address>
-      <a href="mailto:mail@mail">Пишите:mail@mail</a>
-      </address>
-      © Корниенко А.В., 2016
-	  
-   </footer>
+	</form>
+	<br />
+	<footer>
+		<address>
+		<a href="mailto:mail@mail">Пишите:mail@mail</a>
+		</address>
+		© Корниенко А.В., 2016
+	</footer>
 
    </body>
    
