--- a/calculator.html
+++ b/calculator.html
@@ -10,8 +10,8 @@
 		<h1>Основы Web-технологий</h1>
 		   <nav>
 			  <ul>
-				<li><a href="Index.html">Главная</a>
-				<li><a href="webTechnology.html">Web-технологии</a>
+				<li><a href="index.html">Главная</a>
+				<li><a href="webtechnology.html">Web-технологии</a>
 					<ul>
 						<li><a href="html.html">HTML5</a></li>
 						 <li><a href="css.html">CSS3</a></li>
