--- a/webtechnology.html
+++ b/webtechnology.html
@@ -11,8 +11,8 @@
 
 	   <nav>
 		  <ul>
-			<li><a href="Index.html">Главная</a></li>
-			<li><a href="webTechnology.html">Web-технологии</a>
+			<li><a href="index.html">Главная</a></li>
+			<li><a href="webtechnology.html">Web-технологии</a>
 				<ul>
 					<li><a href="html.html">HTML5</a></li>
 					 <li><a href="css.html">CSS3</a></li>
