--- a/html.html
+++ b/html.html
@@ -6,8 +6,8 @@
    </head>
    <body>
    <header>
-   <img id="top" src="webLogo.PNG" alt="webLogo logo" width="245" height="134" />
-	<h1>Основы Web-технологий</h1>
+   <img src="webLogo.PNG" alt="webLogo logo" width="245" height="134" />
+	<h1 id="top">Основы Web-технологий</h1>
 	   <nav>
 		  <ul>
 			<li><a href="index.html">Главная</a></li>
@@ -23,11 +23,11 @@
 		  </ul>
 	   </nav>
 	</header>   
-	<section>
+	<aside>
 	<h3>Дополнительная информация</h3>
 	<i><b>Язык разметки в</b> компьютерной</i> терминологии — набор символов или последовательностей, вставляемых в текст для передачи информации о его выводе или строении. Принадлежит классу <i>компьютерных языков</i>. Текстовый документ, написанный с использованием языка разметки, содержит не только сам текст (как последовательность слов и знаков препинания), но и дополнительную информацию о различных его участках — например, указание на заголовки, выделения, списки и т.д. В более сложных случаях язык разметки позволяет вставлять в документ интерактивные элементы и содержание других документов.
 	<i><b>Шифрование —</b></i> обратимое преобразование информации в целях сокрытия от <i>неавторизованных</i> лиц, с предоставлением, в это же время, <i>авторизованным</i> пользователям доступа к ней. Главным образом, шифрование служит задачей соблюдения <i>конфиденциальности</i> передаваемой информации. Важной особенностью любого алгоритма шифрования является использование <i>ключа</i>, который утверждает выбор конкретного преобразования из совокупности возможных для данного алгоритма.
-	</section>
+	</aside>
 
 	<article>
 		
