--- a/html.html
+++ b/html.html
@@ -6,8 +6,8 @@
    </head>
    <body>
    <header>
-   <img src="webLogo.PNG" alt="webLogo logo" width="245" height="134" />
-	<h1 id="top">Основы Web-технологий</h1>
+   <img id="top" src="webLogo.PNG" alt="webLogo logo" width="245" height="134" />
+	<h1>Основы Web-технологий</h1>
 	   <nav>
 		  <ul>
 			<li><a href="index.html">Главная</a></li>
@@ -53,9 +53,8 @@
 		</section>
 	</article>
 	<br />
+			<a href="#top">Вернуться вверх</a>
 	<footer>
-		
-		<a href="#top">Вернуться вверх</a>
 		<address>
 		<a href="mailto:mail@mail">Пишите:mail@mail</a>
 		</address>
