--- a/calculator.html
+++ b/calculator.html
@@ -3,29 +3,32 @@
    <head>
       <title>HTML</title>
       <meta charset="utf-8" />
+	  <link rel="stylesheet" type="text/css" href="style.css">
    </head>
    <body>
    <header>
-		<img src="webLogo.PNG" alt="webLogo logo" width="245" height="134" />
+		<div class="image-float">
+		<a href="index.html" class="logo"><img src="webLogo.PNG" alt="webLogo logo" width="245" height="134" /></a>
+		</div>
 		<h1>Основы Web-технологий</h1>
-		   <nav>
-			  <ul>
-				<li><a href="index.html">Главная</a>
-				<li><a href="webtechnology.html">Web-технологии</a>
-					<ul>
-						<li><a href="html.html">HTML5</a></li>
-						 <li><a href="css.html">CSS3</a></li>
-						 <li><a href="js.html">JavaScript</a></li>
-					</ul>
-				</li>
-				 <li><a href="calculator.html">Калькулятор</a></li>
-				 <li><a href="test.html">Тест</a></li>
-			  </ul>
-			</nav>
-	</header>
-   
-	<form id="calculator" name="calculator" >
-		<table border="1">
+		
+		<nav>
+		  <ul class="headMenu">
+			<li><a href="index.html">Главная</a></li>
+			<li><a href="webtechnology.html">Web-технологии</a>
+				<ul class="submenu">
+					<li><a href="html.html">HTML5</a></li>
+					 <li><a href="css.html">CSS3</a></li>
+					 <li><a href="js.html">JavaScript</a></li>
+				</ul></li>
+			 <li><a href="calculator.html">Калькулятор</a></li>
+			 <li><a href="test.html">Тест</a></li>
+		  </ul>
+	   </nav>
+		</header>
+   <div class="body">
+	<form id="Formcalculator" name="Formcalculator" >
+		<table class="calculator" border="1">
 			<tr>
 			<td colspan="5"><input type="text" name="result"/></td>
 			</tr>
@@ -51,7 +54,7 @@
 			<td><input type="button" name="two" value="2" /></td>
 			<td><input type="button" name="three" value="3" /></td>
 			<td><input type="button" name="sub" value="-" /></td>
-			<td rowspan="2"><input type="button" name="equil" value="=" /></td>
+			<td rowspan="2"><input type="button" name="equil" id="equil" value="=" /></td>
 			</tr>
 			
 			<tr>
@@ -61,7 +64,7 @@
 			</tr>
 		</table>
 	</form>
-
+</div>
 	<br />
 	
 	<footer>
