--- a/css.html
+++ b/css.html
@@ -3,26 +3,30 @@
    <head>
       <title>HTML</title>
       <meta charset="utf-8" />
+	  <link rel="stylesheet" type="text/css" href="style.css">
    </head>
    <body>
    <header>
-   <img src="webLogo.PNG" alt="webLogo logo" width="245" height="134" />
-	<h1>Основы Web-технологий</h1>
-	   <nav>
-		  <ul>
+		<div class="image-float">
+		<a href="index.html" class="logo"><img src="webLogo.PNG" alt="webLogo logo" width="245" height="134" /></a>
+		</div>
+		<h1>Основы Web-технологий</h1>
+		
+		<nav>
+		  <ul class="headMenu">
 			<li><a href="index.html">Главная</a></li>
 			<li><a href="webtechnology.html">Web-технологии</a>
-				<ul>
+				<ul class="submenu">
 					<li><a href="html.html">HTML5</a></li>
 					 <li><a href="css.html">CSS3</a></li>
 					 <li><a href="js.html">JavaScript</a></li>
-				</ul>
-			</li>
+				</ul></li>
 			 <li><a href="calculator.html">Калькулятор</a></li>
 			 <li><a href="test.html">Тест</a></li>
 		  </ul>
 	   </nav>
-	</header>   
+		</header>
+<div class="body">		
 	<article>
 	<h2>CSS3</h2>
 
@@ -30,7 +34,7 @@
 	Преимущественно используется как средство описания, оформления внешнего вида <i>Web-страниц</i>, написанных с помощью <i>языков разметки</i> HTML и XHTML, но может также применяться к любым XML-документам, например, к SVG или XUL.
 
 	</article>
-
+</div>
 	<br />
 	<footer>
 
