--- a/html.html
+++ b/html.html
@@ -3,26 +3,29 @@
    <head>
       <title>HTML</title>
       <meta charset="utf-8" />
+	  <link rel="stylesheet" type="text/css" href="style.css">
    </head>
    <body>
    <header>
-   <img id="top" src="webLogo.PNG" alt="webLogo logo" width="245" height="134" />
-	<h1>Основы Web-технологий</h1>
-	   <nav>
-		  <ul>
+		<div class="image-float">
+		<a href="index.html" class="logo"><img src="webLogo.PNG" alt="webLogo logo" width="245" height="134" /></a>
+		</div>
+		<h1>Основы Web-технологий</h1>		
+		<nav>
+		  <ul class="headMenu">
 			<li><a href="index.html">Главная</a></li>
 			<li><a href="webtechnology.html">Web-технологии</a>
-				<ul>
+				<ul class="submenu">
 					<li><a href="html.html">HTML5</a></li>
 					 <li><a href="css.html">CSS3</a></li>
 					 <li><a href="js.html">JavaScript</a></li>
-				</ul>
-			</li>
+				</ul></li>
 			 <li><a href="calculator.html">Калькулятор</a></li>
 			 <li><a href="test.html">Тест</a></li>
 		  </ul>
 	   </nav>
-	</header>   
+		</header>
+<div class="body">		
 	<aside>
 	<h3>Дополнительная информация</h3>
 	<i><b>Язык разметки в</b> компьютерной</i> терминологии — набор символов или последовательностей, вставляемых в текст для передачи информации о его выводе или строении. Принадлежит классу <i>компьютерных языков</i>. Текстовый документ, написанный с использованием языка разметки, содержит не только сам текст (как последовательность слов и знаков препинания), но и дополнительную информацию о различных его участках — например, указание на заголовки, выделения, списки и т.д. В более сложных случаях язык разметки позволяет вставлять в документ интерактивные элементы и содержание других документов.
@@ -54,6 +57,8 @@
 	</article>
 	<br />
 			<a href="#top">Вернуться вверх</a>
+	</div>
+	
 	<footer>
 		<address>
 		<a href="mailto:mail@mail">Пишите:mail@mail</a>
