--- a/test.html
+++ b/test.html
@@ -3,27 +3,30 @@
  <head>
     <title>HTML</title>
     <meta charset="utf-8" />
+	<link rel="stylesheet" type="text/css" href="style.css">
  </head>
    <body>
    <header>
-		<img src="webLogo.PNG" alt="webLogo logo" width="245" height="134" />
+		<div class="image-float">
+		<a href="index.html" class="logo"><img src="webLogo.PNG" alt="webLogo logo" width="245" height="134" /></a>
+		</div>
 		<h1>Основы Web-технологий</h1>
+		
 		<nav>
-		  <ul>
+		  <ul class="headMenu">
 			<li><a href="index.html">Главная</a></li>
 			<li><a href="webtechnology.html">Web-технологии</a>
-				<ul>
+				<ul class="submenu">
 					<li><a href="html.html">HTML5</a></li>
 					 <li><a href="css.html">CSS3</a></li>
 					 <li><a href="js.html">JavaScript</a></li>
-				</ul>
-			</li>
+				</ul></li>
 			 <li><a href="calculator.html">Калькулятор</a></li>
 			 <li><a href="test.html">Тест</a></li>
 		  </ul>
-		</nav>
-	</header>
-
+	   </nav>
+		</header>
+	<div class="body">
 	<form id="test" name="test">
 
 		Какой тег предназначен для создания ссылок:
@@ -62,6 +65,7 @@
 		<input type="checkbox" name="form4" value="form4" />validate<br />
 
 	</form>
+	</div>
 	<br />
 	<footer>
 		<address>
